# multiple--cran

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults  setup.sh
components/: README.md
components/list/: list.c
docs/: waveshare_pinout.md
drivers/: CMakeLists.txt  ble_driver.c  ble_driver.h  can_driver.c  can_driver.h  i2c_driver.c  i2c_driver.h  lcd_panel_waveshare.c  lcd_panel_waveshare.h  rs485_driver.c  rs485_driver.h  st7701.c  st7701.h  uart_driver.c  uart_driver.h  waveshare_pins.h  wifi_driver.c  wifi_driver.h
main/: CMakeLists.txt  main.c
main/board/: board.h  board_ws_lcd_5b.h  board_ws_lcd_7.h
main/lv_100ask_2048/: lv_100ask_2048.c
modules/: CMakeLists.txt  battery.c  battery.h  screen_detect.c  screen_detect.h  sd_card.c  sd_card.h
tools/: orchestrator.py  provisioner.py
ui/: CMakeLists.txt  ui.c  ui.h
